# quill

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  eslint.config.js  index.html  install.sh  package-lock.json  package.json  release.sh  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/claude-integration/commands/: qbuild.md
src-tauri/claude-integration/mcp/: dependencies.py  pyproject.toml  server.py
src-tauri/claude-integration/mcp/tools/: analytics.py  context.py  details.py  discovery.py  search.py
src-tauri/claude-integration/scripts/: context-capture.cjs  context-router.cjs  context-router.test.cjs  context-telemetry.cjs  observe.cjs  qbuild-guard.sh  report-tokens.sh  session-end-learn.cjs  session-sync.cjs
src-tauri/claude-integration/skills/: build-SKILL.md
src-tauri/claude-integration/templates/: claude-md-section-base.md  claude-md-section.md
src-tauri/codex-integration/scripts/: context-router.cjs  context-telemetry.cjs  hook-observe.cjs  observe.cjs  report-tokens.sh  session-end-learn.cjs  session-sync.cjs
src-tauri/codex-integration/templates/: agents-md-section-base.md  agents-md-section.md
src-tauri/icons/: icon.icns
src-tauri/src/: ai_client.rs  appimage_integration.rs  auth.rs  brevity.rs  cc_client.rs  claude_setup.rs  compress_prose.rs  config.rs  context_category.rs  crash_reporting.rs  data_paths.rs  eval_harness.rs  fetcher.rs  git_analysis.rs  indicator.rs  learning.rs  lib.rs  main.rs  memory_optimizer.rs  model_usage.rs  models.rs  plugins.rs  prompt_utils.rs  redaction.rs  releases.rs  restart.rs  rule_watcher.rs  server.rs  sessions.rs  storage.rs  transcript_analytics.rs  transcript_identity.rs  tray_keepalive.rs
src-tauri/src/compress_prose/: detect.rs  prompt.rs  validate.rs
src-tauri/src/integrations/: claude.rs  codex.rs  deploy.rs  manager.rs  manifest.rs  minimax.rs  mod.rs  types.rs
src-tauri/tests/fixtures/replay_set/: case_001_absolute_paths_positive.json  case_002_verify_before_commit_positive.json  case_003_overbroad_skip_tests_regresses.json  case_004_negative_transfer_python_to_rust.json  case_005_hallucinated_evidence.json  case_006_one_off_low_evidence.json  case_007_conflicting_pair_early_return.json  case_008_conflicting_pair_single_exit.json  case_009_suppressed_then_rederived.json  case_010_empty_no_signal.json  case_011_normal_friction_grep_before_edit.json  case_012_normal_friction_neutral_style_nit.json  case_013_stream_c_session_scope_positive.json  case_014_security_weakening_regresses.json  manifest.json
(+288 files in other folders)
