[package]
name = "quill"
version = "0.0.0-injected-by-ci"
edition = "2024"

[lib]
name = "quill_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-window-state = "2"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tokio = { version = "1", features = ["net", "sync"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
rand = "0.8"
hex = "0.4"
subtle = "2"
parking_lot = "0.12"
tantivy = "0.25"
rig-core = { version = "0.32", features = ["reqwest-middleware"] }
reqwest-middleware = "0.5"
http = "1"
schemars = "1"
futures = "0.3"
sha2 = "0.10.9"
similar = "2"
regex = "1"
walkdir = "2"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
