[project]
name = "quill-mcp"
version = "0.1.0"
description = "MCP server for querying Quill session history and usage analytics"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.0",
    "httpx>=0.27.0",
]

[project.scripts]
quill-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
